--- a/over.html
+++ b/over.html
@@ -72,7 +72,7 @@
     <!-- Over -->
 
     <section id="projects" class="projects-section bg-light">
-        <div class="container containter-over">
+        <div class="container container-over">
             <div class="row align-items-center no-gutters mb-4 mb-lg-5">
                 <div class="col-xl-8 col-lg-7">
                     <img class="img-fluid mb-3 mb-lg-0" src="images/eng.jpg" alt="">
@@ -103,12 +103,12 @@
     </section>
 
     <section id="projects" class="projects-section">
-        <div class="container containter-over">
+        <div class="container container-over">
             <div class="row align-items-center no-gutters mb-4 mb-lg-5">
-                <div class="col-xl-8 col-lg-7 order-md-1">
-                    <img class="img-fluid mb-3 mb-lg-0" src="images/oorzaak.jpg" alt="">
+                <div class="col-xl-8 col-lg-8  order-md-1">
+                    <img class="img-fluid img-oorzaak mb-3 mb-lg-0" src="images/oorzaak.jpg" alt="">
                 </div>
-                <div class="col-xl-4 col-lg-5">
+                <div class="col-xl-4 col-lg-4">
                     <div class="featured-text2 text-center text-lg-left">
                         <h2> oorzaken </h2>
                         <p>Specifieke oorzaken voor deze fobie zijn nog steeds niet vastgesteld. Wel wetende dat deze
@@ -124,7 +124,7 @@
     </section>
 
     <section id="projects" class="projects-section bg-light">
-            <div class="container containter-over">
+            <div class="container container-over">
                 <div class="row align-items-center no-gutters mb-4 mb-lg-5">
                     <div class="col-xl-8 col-lg-7">
                         <img class="img-fluid mb-3 mb-lg-0" src="images/behandeling2.jpeg" alt="">
